# Game-of-Life

./: .gitignore  GofL.py  README.md  VERSIONS.md
requirements/: poetry_deps.txt  pyproject.toml  requirements.txt
