[tool.poetry]
name = "GofL_venv_packages"
version = "0.1.0"
description = "Venv Packages in ###"
authors = ["FeoN_"]
license = "Public Domain"

[tool.poetry.dependencies]
python = ">=3.10.2,<3.11"
pygame = "^2.1.2"
numba = "^0.55.1"
numpy = ">=1.21.5,<1.22"
tk = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
